[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
common = { path = "../common" }
sync_naive_lru = { path = "../sync_naive_lru" }

[[bench]]
name = "bench_main"
harness = false
